--- a/FL2023-Assignment1-orosalesalfaroalfaro/wwwroot/index.html
+++ b/FL2023-Assignment1-orosalesalfaroalfaro/wwwroot/index.html
@@ -1,24 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <title>Prometheus (2012)</title>
+    <link rel="stylesheet" href="styles.css">
     <title>PROMETHEUS (2012)</title>
 </head>
-<body style="background-color: >
-    <div class="container" style="text-align: center;">
-        <h1 id="Title">Media Title</h1>
-        <img id="CoverArt" src="cover.jpg" alt="Media Cover Art" style="border-radius: 50%; max-width: 200px;">
-        <h5 id="Rating">9.5</h5>
-        <iframe id="Trailer" src="https://www.youtube.com/watch?v=5UEv03g51kU" frameborder="0" allowfullscreen style="max-width: 100%;"></iframe>
-        <a href="https://www.imdb.com/" target="_blank">IMDB</a>
-        <p id="Summary">Prometheus - Offical FUll Trailer</p>
-        <ul id="Actors">
-            <li>Actor 1</li>
-            <li>Actor 2</li>
-            <li>Actor 3</li>
-        </ul>
+
+<body>
+
+    <div class="container">
+
+        <h1 id="Title">Prometheus (2012)</h1>
+
+        <img id="CoverArt" src="./images/prometheus.jpg" alt="Prometheus Cover Art" />
+
+
     </div>
+
 </body>
 </html>
