--- a/FL2023-Assignment1-orosalesalfaroalfaro/wwwroot/index.html
+++ b/FL2023-Assignment1-orosalesalfaroalfaro/wwwroot/index.html
@@ -13,7 +13,7 @@
 
         <h1 id="Title">Prometheus (2012)</h1>
 
-        <img id="CoverArt" src="./images/prometheus.jpg" alt="Prometheus Cover Art" />
+        <img id="CoverArt" src="prometheus_584x800_d81067fb.jpeg" alt="Prometheus Cover Art" />
 
 
     </div>
