update before publishing

--- a/FL2023-Assignment1-orosalesalfaroalfaro/wwwroot/index.html
+++ b/FL2023-Assignment1-orosalesalfaroalfaro/wwwroot/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Prometheus (2012)</title>
     <link rel="stylesheet" href="styles.css">
-    <title>PROMETHEUS (2012)</title>
 </head>
 
 <body>
@@ -15,7 +14,24 @@
 
         <img id="CoverArt" src="prometheus_584x800_d81067fb.jpeg" alt="Prometheus Cover Art" />
 
+        <nav>
 
+        </nav>
+
+        <a href="https://www.imdb.com/title/tt1446714/" target="_blank">Prometheus on IMDB</a>
+
+        <h5 id="Rating">8.0/10</h5>
+
+        <iframe width="600" height="500" src="https://www.youtube.com/embed/sftuxbvGwiU" title="Prometheus - Official Trailer [TRUE HD]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        <ul id="Actors">
+            <h2>Actors:</h2>
+            <li>Noomi Rapace</li>
+            <li>Michael Fassbender</li>
+            <li>Charlize Theron</li>
+            <li>Idris Elba</li>
+            <li>Logan Marshall-Green</li>
+        </ul>
     </div>
 
 </body>
